--- a/levenshtein/Makefile
+++ b/levenshtein/Makefile
@@ -6,11 +6,11 @@ INC = -I/usr/include
 LIBS = -L/usr/lib
 CXXFLAGS = -std=c++11 -g $(INC) -fPIC
 
-OBJS = getopt.o edit_distance.o edit_distance_pos.o util.o cmain.o
-SRCS = getopt.c edit_distance.cpp edit_distance_pos.cpp util.cpp cmain.cpp
+OBJS = getopt.o edit_distance.o util.o cmain.o
+SRCS = getopt.c edit_distance.cpp util.cpp cmain.cpp
 
 
-TARGET = asm1
+TARGET = asm
 
 all : $(TARGET)
 
